unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Name_of_Search_Business_Address__c.field-meta.xml
<CustomField>
    <fullName>GSI_Name_of_Search_Business_Address__c</fullName>
    <label>GSI - Name of Search - Business Address</label>
    <type>TextArea</type>
</CustomField>