unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Name_of_Search_PG1__c.field-meta.xml
<CustomField>
    <fullName>GSI_Name_of_Search_PG1__c</fullName>
    <label>GSI - Name of Search - PG1</label>
    <type>TextArea</type>
</CustomField>