unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Name_on_Acct_DBA__c.field-meta.xml
<CustomField>
    <fullName>GSI_Name_on_Acct_DBA__c</fullName>
    <label>GSI - Name on Acct - DBA</label>
    <type>TextArea</type>
</CustomField>