unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Name_on_Acct_Google_Search__c.field-meta.xml
<CustomField>
    <fullName>GSI_Name_on_Acct_Google_Search__c</fullName>
    <label>GSI - Name on Acct - Google Search</label>
    <type>TextArea</type>
</CustomField>