unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Name_on_Acct_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>GSI_Name_on_Acct_Legal_Name__c</fullName>
    <label>GSI - Name on Acct - Legal Name</label>
    <type>TextArea</type>
</CustomField>