unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Notes_Business_Address__c.field-meta.xml
<CustomField>
    <fullName>GSI_Notes_Business_Address__c</fullName>
    <label>GSI - Notes - Business Address</label>
    <type>TextArea</type>
</CustomField>