unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Notes_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>GSI_Notes_Business_Number__c</fullName>
    <label>GSI - Notes - Business Number</label>
    <type>TextArea</type>
</CustomField>