unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Notes_DBA__c.field-meta.xml
<CustomField>
    <fullName>GSI_Notes_DBA__c</fullName>
    <label>GSI - Notes - DBA</label>
    <type>TextArea</type>
</CustomField>