unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Notes_Google_Search__c.field-meta.xml
<CustomField>
    <fullName>GSI_Notes_Google_Search__c</fullName>
    <label>GSI - Notes - Google Search</label>
    <type>TextArea</type>
</CustomField>