unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Notes_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>GSI_Notes_Legal_Name__c</fullName>
    <label>GSI - Notes - Legal Name</label>
    <type>TextArea</type>
</CustomField>