unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Notes_Notes_PG3__c.field-meta.xml
<CustomField>
    <fullName>GSI_Notes_Notes_PG3__c</fullName>
    <label>GSI Notes Notes PG3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>