unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Notes_PG1__c.field-meta.xml
<CustomField>
    <fullName>GSI_Notes_PG1__c</fullName>
    <label>GSI - Notes - PG1</label>
    <type>TextArea</type>
</CustomField>