unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Notes_PG3__c.field-meta.xml
<CustomField>
    <fullName>GSI_Notes_PG3__c</fullName>
    <label>GSI - Notes - PG3</label>
    <type>TextArea</type>
</CustomField>