unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Stip_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>GSI_Stip_Legal_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSI Stip Legal Name</label>
    <type>Checkbox</type>
</CustomField>