unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Stip_Notes_Google_Search__c.field-meta.xml
<CustomField>
    <fullName>GSI_Stip_Notes_Google_Search__c</fullName>
    <label>GSI Stip Notes Google Search</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>