unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Stip_Notes_PG3__c.field-meta.xml
<CustomField>
    <fullName>GSI_Stip_Notes_PG3__c</fullName>
    <label>GSI Stip Notes PG3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>