unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Stip_Notes_PO_Box_Address__c.field-meta.xml
<CustomField>
    <fullName>GSI_Stip_Notes_PO_Box_Address__c</fullName>
    <label>GSI Stip Notes PO Box Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>