unpackaged/main/default/objects/Credit_Review__c/fields/GSI_Stip_PG2__c.field-meta.xml
<CustomField>
    <fullName>GSI_Stip_PG2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSI Stip PG2</label>
    <type>Checkbox</type>
</CustomField>