unpackaged/main/default/objects/Credit_Review__c/fields/GSl_Stip_Notes_PG1__c.field-meta.xml
<CustomField>
    <fullName>GSl_Stip_Notes_PG1__c</fullName>
    <label>GSl Stip Notes PG1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>