unpackaged/main/default/objects/Credit_Review__c/fields/GSl_Stip_Notes_PG2__c.field-meta.xml
<CustomField>
    <fullName>GSl_Stip_Notes_PG2__c</fullName>
    <label>GSl Stip Notes PG2</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>