unpackaged/main/default/objects/Credit_Review__c/fields/GSl_Stip_Notes_PG3__c.field-meta.xml
<CustomField>
    <fullName>GSl_Stip_Notes_PG3__c</fullName>
    <label>GSl Stip Notes PG3</label>
    <type>TextArea</type>
</CustomField>