unpackaged/main/default/objects/Credit_Review__c/fields/Half_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Half_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Half Revenue</label>
    <type>Checkbox</type>
</CustomField>