unpackaged/main/default/objects/Credit_Review__c/fields/Initial_Commercial_Review_Decision__c.field-meta.xml
<CustomField>
    <fullName>Initial_Commercial_Review_Decision__c</fullName>
    <label>Initial Commercial Review Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>