unpackaged/main/default/objects/Credit_Review__c/fields/Initial_Decline_By__c.field-meta.xml
<CustomField>
    <fullName>Initial_Decline_By__c</fullName>
    <label>Initial Decline By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>