unpackaged/main/default/objects/Credit_Review__c/fields/Internal_MID__c.field-meta.xml
<CustomField>
    <fullName>Internal_MID__c</fullName>
    <displayFormat>FWC{0000}</displayFormat>
    <label>Internal MID</label>
    <type>AutoNumber</type>
</CustomField>