unpackaged/main/default/objects/Credit_Review__c/fields/Loss_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Loss_Percentage__c</fullName>
    <description>This field will capture loss percentage data.  The field will be input by the CA after reviewing the customers tax returns.</description>
    <inlineHelpText>This field will capture loss percentage data.  The field will be input by the CA after reviewing the customers tax returns.</inlineHelpText>
    <label>Loss Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>