unpackaged/main/default/objects/Credit_Review__c/fields/Max_FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_FICO_Score__c</fullName>
    <formula>MAX( 
IF(ISBLANK(PG_1_EXP_Score__c), 0, VALUE(PG_1_EXP_Score__c)), 
IF(ISBLANK(PG_1_EQF_Score__c), 0, VALUE(PG_1_EQF_Score__c)),
IF(ISBLANK(PG_2_EXP_Score__c), 0, VALUE(PG_2_EXP_Score__c)),
IF(ISBLANK(PG_2_EQF_Score__c ), 0, VALUE(PG_2_EQF_Score__c )),
IF(ISBLANK(PG_3_EXP_Score__c), 0, VALUE(PG_3_EXP_Score__c)),
IF(ISBLANK(PG_3_EQF_Score__c ), 0, VALUE(PG_3_EQF_Score__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max FICO Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>