unpackaged/main/default/objects/Credit_Review__c/fields/Max_Negative_Days_v2__c.field-meta.xml
<CustomField>
    <fullName>Max_Negative_Days_v2__c</fullName>
    <label>Max Negative Days v2</label>
    <summarizedField>Credit_Review_Bank_Summary__c.Max_Negative_Days__c</summarizedField>
    <summaryFilterItems>
        <field>Credit_Review_Bank_Summary__c.Primary_Account__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Review_Bank_Summary__c.Credit_Review__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>