unpackaged/main/default/objects/Credit_Review__c/fields/Max_NSF__c.field-meta.xml
<CustomField>
    <fullName>Max_NSF__c</fullName>
    <label>Max NSF</label>
    <summarizedField>Monthly_Review__c.NSF_s__c</summarizedField>
    <summaryForeignKey>Monthly_Review__c.Credit_Review__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>