unpackaged/main/default/objects/Credit_Review__c/fields/Max_Term__c.field-meta.xml
<CustomField>
    <fullName>Max_Term__c</fullName>
    <description>This field will capture the Maximum Term that the customer is eligible for.</description>
    <inlineHelpText>This field will capture the Maximum Term that the customer is eligible for.</inlineHelpText>
    <label>Max Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>