unpackaged/main/default/objects/Credit_Review__c/fields/Max_Tier__c.field-meta.xml
<CustomField>
    <fullName>Max_Tier__c</fullName>
    <label>Max Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>