unpackaged/main/default/objects/Credit_Review__c/fields/Min_FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_FICO_Score__c</fullName>
    <formula>IF(
  AND(
    ISBLANK(PG_1_EXP_Score__c), 
    ISBLANK(PG_1_EQF_Score__c), 
    ISBLANK(PG_2_EXP_Score__c), 
    ISBLANK(PG_2_EQF_Score__c ),
    ISBLANK(PG_3_EXP_Score__c), 
    ISBLANK(PG_3_EQF_Score__c )), 0,

MIN(
  VALUE(BLANKVALUE(PG_1_EXP_Score__c, '1000')), 
  VALUE(BLANKVALUE(PG_1_EQF_Score__c, '1000')), 
  VALUE(BLANKVALUE(PG_2_EXP_Score__c, '1000')), 
  VALUE(BLANKVALUE(PG_2_EQF_Score__c, '1000')),
  VALUE(BLANKVALUE(PG_3_EXP_Score__c, '1000')), 
  VALUE(BLANKVALUE(PG_3_EQF_Score__c, '1000'))))</formula>
    <label>Min FICO Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>