unpackaged/main/default/objects/Credit_Review__c/fields/Mitigating_Factor_2__c.field-meta.xml
<CustomField>
    <fullName>Mitigating_Factor_2__c</fullName>
    <label>Mitigating Factor #2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time in Business</fullName>
            </value>
            <value>
                <fullName>Average Daily Balance</fullName>
            </value>
            <value>
                <fullName>100% Ownership</fullName>
            </value>
            <value>
                <fullName>Strong/well established Personal Credit</fullName>
            </value>
            <value>
                <fullName>Overdraft Protection</fullName>
            </value>
            <value>
                <fullName>Additional Google Searches</fullName>
            </value>
            <value>
                <fullName>MTD Bank to show daily payments have ceased</fullName>
            </value>
            <value>
                <fullName>Strong Business Report</fullName>
            </value>
            <value>
                <fullName>Site Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>