unpackaged/main/default/objects/Credit_Review__c/fields/Month_to_Date_required_day_of_funding__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Date_required_day_of_funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Month to Date required day of funding</label>
    <type>Checkbox</type>
</CustomField>