unpackaged/main/default/objects/Credit_Review__c/fields/Months_Under_10k_Deposits_v2__c.field-meta.xml
<CustomField>
    <fullName>Months_Under_10k_Deposits_v2__c</fullName>
    <label>Months Under 10k Deposits v2</label>
    <summarizedField>Credit_Review_Bank_Summary__c.Months_Under_10k_Deposits__c</summarizedField>
    <summaryFilterItems>
        <field>Credit_Review_Bank_Summary__c.Primary_Account__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Review_Bank_Summary__c.Credit_Review__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>