unpackaged/main/default/objects/Credit_Review__c/fields/NF_Commercial_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>NF_Commercial_Portfolio__c</fullName>
    <description>This field will indicate if the credit review was approved as a commercial deal.</description>
    <inlineHelpText>This field will indicate if the credit review was approved as a commercial deal.</inlineHelpText>
    <label>NF Commercial Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>