unpackaged/main/default/objects/Credit_Review__c/fields/Number_of_Months_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months_Reviewed__c</fullName>
    <description>This field will indicate the number of months that were reviewed.</description>
    <inlineHelpText>This field will indicate the number of months that were reviewed.</inlineHelpText>
    <label>Number of Months Reviewed</label>
    <summaryFilterItems>
        <field>Monthly_Review__c.Deposit_Count__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Monthly_Review__c.Credit_Review__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>