unpackaged/main/default/objects/Credit_Review__c/fields/Number_of_Months_Reviewed_v2__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months_Reviewed_v2__c</fullName>
    <label>Number of Months Reviewed v2</label>
    <summarizedField>Credit_Review_Bank_Summary__c.Number_of_Months_Reviewed__c</summarizedField>
    <summaryFilterItems>
        <field>Credit_Review_Bank_Summary__c.Primary_Account__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Review_Bank_Summary__c.Credit_Review__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>