unpackaged/main/default/objects/Credit_Review__c/fields/Open_Judgements__c.field-meta.xml
<CustomField>
    <fullName>Open_Judgements__c</fullName>
    <description>This field will capture if a company / customer has any open judgments.</description>
    <inlineHelpText>This field will capture if a company / customer has any open judgments.</inlineHelpText>
    <label>Open Judgments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>