unpackaged/main/default/objects/Credit_Review__c/fields/Open_Liens_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Liens_Amount__c</fullName>
    <description>This field will capture the amount of any open liens against the customer.</description>
    <inlineHelpText>This field will capture the amount of any open liens against the customer.</inlineHelpText>
    <label>Open Liens ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>