unpackaged/main/default/objects/Credit_Review__c/fields/Open_Public_Records__c.field-meta.xml
<CustomField>
    <fullName>Open_Public_Records__c</fullName>
    <label>Open Public Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>