unpackaged/main/default/objects/Credit_Review__c/fields/Open_Public_Records_Balance__c.field-meta.xml
<CustomField>
    <fullName>Open_Public_Records_Balance__c</fullName>
    <label>Open Public Records Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>