unpackaged/main/default/objects/Credit_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Reviews</relationshipLabel>
    <relationshipName>Credit_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>