unpackaged/main/default/objects/Credit_Review__c/fields/Opportunity_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Hyperlink__c</fullName>
    <formula>HYPERLINK("https://nf.my.salesforce.com/" + Opportunity__r.OpportunityID18__c, "Opportunity Link")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Hyperlink</label>
    <type>Text</type>
</CustomField>