unpackaged/main/default/objects/Credit_Review__c/fields/Opportunity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Email__c</fullName>
    <label>Opportunity Owner Email</label>
    <type>Email</type>
</CustomField>