unpackaged/main/default/objects/Credit_Review__c/fields/Oppty_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Legal_Name__c</fullName>
    <formula>Opportunity__r.Legal_Name__c</formula>
    <label>Oppty Legal Name</label>
    <type>Text</type>
</CustomField>