unpackaged/main/default/objects/Credit_Review__c/fields/Paydex__c.field-meta.xml
<CustomField>
    <fullName>Paydex__c</fullName>
    <label>Paydex</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>