unpackaged/main/default/objects/Credit_Review__c/fields/Paynet__c.field-meta.xml
<CustomField>
    <fullName>Paynet__c</fullName>
    <description>This field will indicate if the company has a Paynet score.</description>
    <inlineHelpText>Select yes if the company has a Paynet score.</inlineHelpText>
    <label>Paynet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Paynet Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>