unpackaged/main/default/objects/Credit_Review__c/fields/Personal_Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Personal_Credit_Notes__c</fullName>
    <label>Personal Credit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>