unpackaged/main/default/objects/Credit_Review__c/fields/PF_Done_Approvable_Credit__c.field-meta.xml
<CustomField>
    <fullName>PF_Done_Approvable_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy Label Change:PF - Done - Approvable- Credit===&gt;PF - Done - Sufficient - Credit</description>
    <label>PF - Done - Sufficient - Credit</label>
    <type>Checkbox</type>
</CustomField>