unpackaged/main/default/objects/Credit_Review__c/fields/PF_Done_Bank_Address_Analysis__c.field-meta.xml
<CustomField>
    <fullName>PF_Done_Bank_Address_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PF - Done - Bank Address Analysis</label>
    <type>Checkbox</type>
</CustomField>