unpackaged/main/default/objects/Credit_Review__c/fields/PF_Notes_Approvable_Credit__c.field-meta.xml
<CustomField>
    <fullName>PF_Notes_Approvable_Credit__c</fullName>
    <description>Legacy Label Change:PF - Notes - Approvable Credit===&gt;PF - Notes - Sufficient Credit</description>
    <label>PF - Notes - Sufficient Credit</label>
    <type>TextArea</type>
</CustomField>