unpackaged/main/default/objects/Credit_Review__c/fields/PF_Notes_Bank_Address_Analysis__c.field-meta.xml
<CustomField>
    <fullName>PF_Notes_Bank_Address_Analysis__c</fullName>
    <label>PF - Notes - Bank Address Analysis</label>
    <type>TextArea</type>
</CustomField>