unpackaged/main/default/objects/Credit_Review__c/fields/PF_Notes_Matching_Information__c.field-meta.xml
<CustomField>
    <fullName>PF_Notes_Matching_Information__c</fullName>
    <label>PF - Notes - Matching Information</label>
    <type>TextArea</type>
</CustomField>