unpackaged/main/default/objects/Credit_Review__c/fields/PF_Stip_Approvable_Credit__c.field-meta.xml
<CustomField>
    <fullName>PF_Stip_Approvable_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PF - Stip - Sufficient Credit</label>
    <type>Checkbox</type>
</CustomField>