unpackaged/main/default/objects/Credit_Review__c/fields/PF_Stip_Matching_Information__c.field-meta.xml
<CustomField>
    <fullName>PF_Stip_Matching_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PF - Stip - Matching Information</label>
    <type>Checkbox</type>
</CustomField>