unpackaged/main/default/objects/Credit_Review__c/fields/PF_Stip_Notes_Approvable_Credit__c.field-meta.xml
<CustomField>
    <fullName>PF_Stip_Notes_Approvable_Credit__c</fullName>
    <description>Legacy Label Change:PF Stip Notes Approvable Credit===&gt;PF - Notes - Sufficient Credit</description>
    <label>PF Stip Notes Sufficient Credit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>