unpackaged/main/default/objects/Credit_Review__c/fields/PF_Stip_Notes_Matching_Information__c.field-meta.xml
<CustomField>
    <fullName>PF_Stip_Notes_Matching_Information__c</fullName>
    <label>PF Stip Notes Matching Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>