unpackaged/main/default/objects/Credit_Review__c/fields/PG1__c.field-meta.xml
<CustomField>
    <fullName>PG1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Reviews</relationshipLabel>
    <relationshipName>Credit_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>