unpackaged/main/default/objects/Credit_Review__c/fields/PG1_EQF_Cons_Summary__c.field-meta.xml
<CustomField>
    <fullName>PG1_EQF_Cons_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG1 EQF Cons Summary</label>
    <referenceTo>Consumer_Credit_Summary__c</referenceTo>
    <relationshipLabel>Credit Reviews (PG1 EQF)</relationshipLabel>
    <relationshipName>Credit_Reviews_PG1_EQF</relationshipName>
    <type>Lookup</type>
</CustomField>