unpackaged/main/default/objects/Credit_Review__c/fields/PG1Search__c.field-meta.xml
<CustomField>
    <fullName>PG1Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PG 1 Search</label>
    <type>Checkbox</type>
</CustomField>