unpackaged/main/default/objects/Credit_Review__c/fields/PG2__c.field-meta.xml
<CustomField>
    <fullName>PG2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Reviews (PG2)</relationshipLabel>
    <relationshipName>Credit_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>