unpackaged/main/default/objects/Credit_Review__c/fields/PG2_EQF_Cons_Summary__c.field-meta.xml
<CustomField>
    <fullName>PG2_EQF_Cons_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG2 EQF Cons Summary</label>
    <referenceTo>Consumer_Credit_Summary__c</referenceTo>
    <relationshipLabel>Credit Reviews (PG2 EQF)</relationshipLabel>
    <relationshipName>Credit_Reviews_PG2_EQF</relationshipName>
    <type>Lookup</type>
</CustomField>