unpackaged/main/default/objects/Credit_Review__c/fields/PG2Search__c.field-meta.xml
<CustomField>
    <fullName>PG2Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PG 2 Search</label>
    <type>Checkbox</type>
</CustomField>