unpackaged/main/default/objects/Credit_Review__c/fields/PG3__c.field-meta.xml
<CustomField>
    <fullName>PG3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Reviews (PG3)</relationshipLabel>
    <relationshipName>Credit_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>