unpackaged/main/default/objects/Credit_Review__c/fields/PG3_Cons_Risk_Summary__c.field-meta.xml
<CustomField>
    <fullName>PG3_Cons_Risk_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG3 Cons Risk Summary</label>
    <referenceTo>Consumer_Risk_Summary__c</referenceTo>
    <relationshipLabel>PG3 Cons Risk Summary</relationshipLabel>
    <relationshipName>Credit_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>