unpackaged/main/default/objects/Credit_Review__c/fields/PG3_EXP_Cons_Summary__c.field-meta.xml
<CustomField>
    <fullName>PG3_EXP_Cons_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG3 EXP Cons Summary</label>
    <referenceTo>Consumer_Credit_Summary__c</referenceTo>
    <relationshipLabel>Credit Reviews (PG3 EXP)</relationshipLabel>
    <relationshipName>Credit_Reviews_PG3_EXP</relationshipName>
    <type>Lookup</type>
</CustomField>