unpackaged/main/default/objects/Credit_Review__c/fields/PG3Search__c.field-meta.xml
<CustomField>
    <fullName>PG3Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PG 3 Search</label>
    <type>Checkbox</type>
</CustomField>