unpackaged/main/default/objects/Credit_Review__c/fields/PG_1_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>PG_1_Credit_Score__c</fullName>
    <formula>IF((VALUE(PG_1_EXP_Score__c) &gt; VALUE(PG_1_EQF_Score__c)) || ISBLANK(PG_1_EQF_Score__c), PG_1_EXP_Score__c, PG_1_EQF_Score__c)</formula>
    <label>PG #1 Credit Score</label>
    <type>Text</type>
</CustomField>